# 3D-Perpection

./: README.md  start.sh
cnn_seg/: bag2pcd.py  cluster.py  cnn_seg.py  data.py  diff_record.py  gen_data.py  layer.py  render.py  test.py  tfrecord.py  train.py  update-data.py
cnn_seg/extert_cpp/: cluster2d.cpp  cluster2d.h  cluster_for_py.cpp  cluster_for_py.pyx  pcl_types.h  setup.py  types.h
cnn_seg/lib/: check.py
cnn_seg/objectbuilder/: base_object_builder.h  cluster2d.cpp  cluster_for_py_.cpp  cluster_for_py_.pyx  convex_hullxy.h  macro.h  min_box.cpp  min_box.h  object.h  pcl_types.h  setup.py  types.cpp  types.h  util.h
feature/: CMakeLists.txt  feature_generator.cpp  feature_generator.h  main.cpp
per/: .cnn_segmentation.cpp.swp  CMakeLists.txt  Config.h  Makefile  cluster2d.h  cnn_segmentation.cpp  cnn_segmentation.h  disjoint_set.h  feature_generator.cpp  feature_generator.h  fortracking.cpp  fortracking.h  geometry_util.cpp  geometry_util.h  object.h  run.cpp  setup.py
per/dataset/: test.json  test.txt
perception/: CMakeLists.txt  Config.h  cluster2d.h  cnn_segmentation.cpp  cnn_segmentation.h  disjoint_set.h  feature_generator.cpp  feature_generator.h  object.h  pcl_types.h  run.cpp  types.cpp  types.h  util.h
perception/dataset/: test.txt
vtk-test/: VTKrender.py  pointobject.py  render.py  renderwidget.py  test  test.json  visualizercontrol.py
